# Physics-engine

./: .gitignore  CMakeLists.txt
include/PhysicsEngine/core/: PhysicsObject.hpp  body.hpp  point.hpp  shape.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_main.cpp
